# FinQuery

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
finquery/: __init__.py  client.py  models.py
finquerygym/: __init__.py  client.py  models.py
scripts/: generate_data.py  validate_data.py
server/: __init__.py  _baseline_runner.py  app.py  database.py  finquery_environment.py
server/data/: financials.json  sectors.json
server/graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
server/rewards/: __init__.py  reward_engine.py
server/tasks/: __init__.py  task_generator.py
server/tools/: __init__.py  balance_sheet.py  cash_flow.py  income_statement.py  price_history.py  ratios.py  sector_compare.py
tests/: test_data_consistency.py  test_endpoints.py  test_graders.py  test_reward_engine.py  test_tools.py
