[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finquerygym"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for financial analysis agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["finquerygym*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
