[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finquery"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for training financial analysis agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["finquery*", "server*"]
